--- a/ux.html
+++ b/ux.html
@@ -101,11 +101,11 @@
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Intelerad/743999698642889-ux-analyst-and-designer'>Intelerad UX Analyst And Designer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Intelerad/743999698642889-ux-analyst-and-designer'>Intelerad UX Analyst And Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Montreal, QCCanada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://usabilla.recruitee.com/o/ux-designer-mediorsenior'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://usabilla.recruitee.com/o/ux-designer-mediorsenior'>
       UX Designer (Medior-Senior) - Usabilla
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
@@ -213,7 +213,7 @@
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.technicondesign.com/index.php/jobs/detail/1455/3'>UX/UI Designer  Automotive Job, Gothenburg, Sweden | Technicon Design</a></h5> 
+<h5><a href='https://www.technicondesign.com/index.php/jobs/detail/1455/3'>UX/UI Designer  Automotive Job, Gothenburg, Sweden | Technicon Design</a></h5> 
 <p><span class="badge badge-light">Gothenburg, Sweden Gothenburg, Sweden</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -261,7 +261,7 @@
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Stockbit/743999698559241-ui-ux-designer'>Stockbit UI/UX Designer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Stockbit/743999698559241-ui-ux-designer'>Stockbit UI/UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -293,7 +293,7 @@
 <p><span class="badge badge-light">New York, NY United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://finleap.recruitee.com/o/senior-uxui-designer-fmdiv-for-a-new-finleap-venture'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://finleap.recruitee.com/o/senior-uxui-designer-fmdiv-for-a-new-finleap-venture'>
       Senior UX/UI Designer (f/m/div) for a new finleap venture - FinLeap GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany  Berlin</span></p>
@@ -315,7 +315,7 @@
 <p><span class="badge badge-light">Minneapolis, MN</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/ux-researcher-bilingual-spanish-english/'>UX Researcher - Bilingual (Spanish/English) | PRODUCTHIRE.NET</a></h5> 
+<h5><a href='https://producthire.net/job/ux-researcher-bilingual-spanish-english/'>UX Researcher - Bilingual (Spanish/English) | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">Pittsburgh</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -385,7 +385,7 @@
 <p><span class="badge badge-light">Brazil  North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/sugarcrm/job/oXAqbfwS'>SugarCRM Careers - Senior UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/sugarcrm/job/oXAqbfwS'>SugarCRM Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -403,7 +403,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/21724-UX-UI-Designer?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/21724-UX-UI-Designer?source=twitter'>
       UX / UI Designer at Lighthouse London - London, UK - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">London London</span></p>
@@ -425,7 +425,7 @@
 <p><span class="badge badge-light">San Francisco, California  San Jose, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/traegergrills/jobs/1932391'>Job Application for Sr. Web UX Designer at Traeger Wood Pellet Grills</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/traegergrills/jobs/1932391'>Job Application for Sr. Web UX Designer at Traeger Wood Pellet Grills</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
